# coding_reliability

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  ancoding_count_undetectable_errors.cpp  ancoding_count_undetectable_errors2.cpp  ancoding_eval.pl  hamming_count_undetectable_errors.cpp
ANcandidates/: ANcandidates.cpp  ANcandidates_check.cpp  CMakeLists.txt
an_decoding_is_error_detection/: CMakeLists.txt
an_decoding_is_error_detection/nbproject/: configurations.xml  project.properties  project.xml
an_decoding_is_error_detection/results/64xOpteron6274/: an_decoding_is_error_detection.cpp  an_decoding_is_error_detection_eval.sh  times.txt
an_decoding_is_error_detection/results/64xOpteron6274/an_decoding_is_error_detection_out1/: an_decoding_is_error_detection.out  an_decoding_is_error_detection.time  an_decoding_is_error_detection_0.out  an_decoding_is_error_detection_1.out  an_decoding_is_error_detection_11.out  an_decoding_is_error_detection_12.out  an_decoding_is_error_detection_13.out  an_decoding_is_error_detection_14.out  an_decoding_is_error_detection_15.out  an_decoding_is_error_detection_16.out  an_decoding_is_error_detection_18.out  an_decoding_is_error_detection_2.out  an_decoding_is_error_detection_20.out  an_decoding_is_error_detection_21.out  an_decoding_is_error_detection_22.out  an_decoding_is_error_detection_23.out  an_decoding_is_error_detection_24.out  an_decoding_is_error_detection_25.out  an_decoding_is_error_detection_26.out  an_decoding_is_error_detection_30.out  an_decoding_is_error_detection_34.out  an_decoding_is_error_detection_36.out  an_decoding_is_error_detection_37.out  an_decoding_is_error_detection_38.out  an_decoding_is_error_detection_39.out  an_decoding_is_error_detection_4.out  an_decoding_is_error_detection_41.out  an_decoding_is_error_detection_43.out  an_decoding_is_error_detection_44.out  an_decoding_is_error_detection_45.out  an_decoding_is_error_detection_47.out  an_decoding_is_error_detection_48.out  an_decoding_is_error_detection_49.out  an_decoding_is_error_detection_5.out  an_decoding_is_error_detection_50.out  an_decoding_is_error_detection_52.out  an_decoding_is_error_detection_53.out  an_decoding_is_error_detection_54.out  an_decoding_is_error_detection_55.out  an_decoding_is_error_detection_56.out  (+8 more)
an_decoding_is_error_detection/results/64xOpteron6274/an_decoding_is_error_detection_out2/: an_decoding_is_error_detection.done  an_decoding_is_error_detection.out  an_decoding_is_error_detection_0.out  an_decoding_is_error_detection_1.out  an_decoding_is_error_detection_10.out  an_decoding_is_error_detection_11.out  an_decoding_is_error_detection_12.out  an_decoding_is_error_detection_13.out  an_decoding_is_error_detection_16.out  an_decoding_is_error_detection_17.out  an_decoding_is_error_detection_18.out  an_decoding_is_error_detection_19.out  an_decoding_is_error_detection_21.out  an_decoding_is_error_detection_23.out  an_decoding_is_error_detection_24.out  an_decoding_is_error_detection_25.out  an_decoding_is_error_detection_27.out  an_decoding_is_error_detection_28.out  an_decoding_is_error_detection_29.out  an_decoding_is_error_detection_30.out  an_decoding_is_error_detection_31.out  an_decoding_is_error_detection_32.out  an_decoding_is_error_detection_33.out  an_decoding_is_error_detection_34.out  an_decoding_is_error_detection_35.out  an_decoding_is_error_detection_36.out  an_decoding_is_error_detection_37.out  an_decoding_is_error_detection_38.out  an_decoding_is_error_detection_39.out  an_decoding_is_error_detection_4.out  an_decoding_is_error_detection_40.out  an_decoding_is_error_detection_41.out  an_decoding_is_error_detection_43.out  an_decoding_is_error_detection_44.out  an_decoding_is_error_detection_48.out  an_decoding_is_error_detection_49.out  an_decoding_is_error_detection_5.out  an_decoding_is_error_detection_50.out  an_decoding_is_error_detection_51.out  an_decoding_is_error_detection_52.out  (+11 more)
an_decoding_is_error_detection/results/64xOpteron6274/an_decoding_is_error_detection_out3/: an_decoding_is_error_detection.done  an_decoding_is_error_detection.err  an_decoding_is_error_detection_0.out  an_decoding_is_error_detection_1.out  an_decoding_is_error_detection_11.out  an_decoding_is_error_detection_12.out  an_decoding_is_error_detection_14.out  an_decoding_is_error_detection_15.out  (+42 more)
an_decoding_is_error_detection/src/: an_decoding_is_error_detection.cpp  an_decoding_is_error_detection_avx2.cpp  run.sh  stopwatch.cpp  stopwatch.hpp  test.cpp  test2.cpp
an_decoding_is_error_detection/src/results_64xOpteron6274/: an_decoding_is_error_detection
distance_distribution/legacy/: CMakeLists.txt  ancoding_count_undetectable_errors.cpp  ancoding_count_undetectable_errors2.cpp  example.cpp  example.out  hamming_count_undetectable_errors.cpp  print_codeword_matrix.cpp  print_codeword_matrix.out
distance_distribution/legacy/Hamming/: AVX2.hpp  AVX2_08.cpp  AVX2_08.hpp  AVX2_16.cpp  AVX2_16.hpp  AVX2_32.cpp  AVX2_32.hpp  AVX2_64.cpp  AVX2_64.hpp  AVX512.hpp  AVX512_64.cpp  AVX512_64.hpp  ExtHamming.hpp  ExtHamming08.cpp  ExtHamming08.hpp  ExtHamming16.cpp  ExtHamming16.hpp  ExtHamming32.cpp  ExtHamming32.hpp  ExtHamming64.cpp  ExtHamming64.hpp  SIMD.hpp  SSE.hpp  SSE_08.cpp  SSE_08.hpp  SSE_16.cpp  SSE_16.hpp  SSE_32.cpp  SSE_32.hpp  SSE_64.cpp  SSE_64.hpp  Scalar.cpp  Scalar.hpp
distance_distribution/legacy/Util/: Binom.cpp  Binom.hpp  Statistics.cpp  Statistics.hpp  StopWatch.cpp  StopWatch.hpp
distance_distribution_super_a/src/: CMakeLists.txt  algorithms.h  an_coding.cu  an_coding.h  an_coding_grid.cu  globals.cpp  globals.h  main.cpp
lib/helper/src/: CMakeLists.txt  statistics.cpp  timer.cpp  timestatistics.cpp
scripts/: ancoding_eval.pl
src/: CMakeLists.txt  algorithms.h  an_coding.cpp  an_coding.cu  an_coding.h  an_coding_grid.cu  an_coding_mc.cu  globals.cpp  globals.h  hamming.cpp  hamming.cu  hamming.h  hamming_grid.cu  hamming_mc.cu  hamming_native.cpp  hamming_native_short.cpp  hamming_native_short_ordering.cpp  main.cpp  rand_gen.cu  rand_gen.cuh  solutions.h  test_curand.cu
(+1629 files in other folders)
